<resources>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_bad_login_or_password">Bad login or password</string>
    <string name="error_login_cancelled">Login cancelled</string>
    <string name="succeeded_authentication">Authentication Succeeded</string>
    <string name="succeeded_registration">User registered successfully </string>
    <string name="wait_connecting_with_server">Establishing connection with the server…</string>

    <!-- Strings related to sensors -->
    <string name="error_sensor_not_found_title">Feature not detected</string>
    <string name="sensor_not_found_message">Parkinson Daily Basis did not find the %s on your device. \n
        Parkinson Daily Basis cannot proceed without it.</string>
    <string name="Accelerometer">accelerometer</string>
    <string name="Light">light</string>

    <!-- App description -->
    <string name="app_name">Parkinson Daily Basis</string>
    <string name="service_name">Parkinson Daily Basis Service</string>

    <!-- Games -->
    <string name="time">Time: %1$d</string>
    <string name="score">Score: %1$d</string>

    <!-- Keyboard Game -->
    <string name="faults">Faults: %1$d</string>
    <string name="win_title">Congratulations!</string>
    <string name="win_message">Your score is %1$d.</string>
    <string name="win_message_and_faults">Your score is %1$d. \nYou missed %2$d times.</string>
    <string name="win_time">Your time was %1$d seconds.</string>

    <string name="welcome_doctor">Welcome, %s</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_dashboard">Dashboard</string>
    <string name="navigation_drawer_notes">Notes</string>
    <string name="navigation_drawer_patients">Add Patients</string>
    <string name="navigation_drawer_rawData">Raw Data</string>
    <string name="navigation_drawer_patientPreferences">Change Patient Settings </string>

    <string name="navigation_drawer_title_gameSettings">Games Settings</string>
    <string name="navigation_drawer_addWords">Add Words</string>
    <string name="navigation_drawer_title_personal">About Me</string>
    <string name="navigation_drawer_logout">Sign out</string>

    <!-- Dashboard Medico -->
    <string name="dashboard_wordsgame_title">Words Game Results</string>
    <string name="dashboard_ballgame_title">Ball Game Results</string>
    <string name="dashboard_shake_title">Shake Results</string>
    <string name="patient_settings_wordsgame_current_time">Current Time: %s</string>
    <string name="patient_settings_ballgame_current_time">Current Time: %s</string>
    <string name="add_word">Add New Word</string>
    <string name="data_not_available">Data not available</string>

    <!-- NotificationModule -->
    <string name="title">Let\'s play a little bit!</string>
    <string name="message">You stopped to play a long time ago, click me and let\'s have some fun!</string>
    <string name="jogo_teclado">Keyboard Game</string>
    <string name="jogo_esfera">Sphere Game</string>
    <string name="highscore">Scores</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="id_prompt">ID (eg. p3)</string>
    <string name="password">Password</string>
    <string name="add_user">Add User</string>
    <string name="sair">Logout</string>


</resources>
