<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/navigation_drawer_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/navigation_drawer_dashboard" />
        <item
            android:id="@+id/nav_notes"
            android:title="@string/navigation_drawer_notes" />
        <item
            android:id="@+id/nav_patient_settings"
            android:title="@string/navigation_drawer_patientPreferences" />
        <item
            android:id="@+id/nav_rawData"
            android:title="@string/navigation_drawer_rawData" />
    </group>

    <item android:title="@string/navigation_drawer_title_gameSettings">
        <menu>
            <item
                android:id="@+id/nav_addWords"
                android:title="@string/navigation_drawer_addWords" />
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_title_personal">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/navigation_drawer_logout" />
        </menu>
    </item>

</menu>
