<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/navigation_drawer_home" />

        <item
            android:id="@+id/nav_user"
            android:title="@string/navigation_drawer_patients" />
    </group>

    <item android:title="@string/navigation_drawer_title_personal">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/power_button_off"
                android:title="@string/navigation_drawer_logout" />
        </menu>
    </item>

</menu>
