<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title_wordsgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/jogo_teclado" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_below="@id/title_wordsgame"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/str_current_wordstime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        android:text="@string/patient_settings_wordsgame_current_time" />

    <TextView
        android:id="@+id/title_change_time"
        android:layout_below="@+id/str_current_wordstime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:text="Change Time (s)" />

    <EditText
        android:id="@+id/str_change_time_words"
        android:layout_below="@+id/str_current_wordstime"
        android:layout_toEndOf="@id/title_change_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/title_ballgame"
        android:layout_below="@+id/title_change_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/jogo_esfera" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_below="@id/title_ballgame"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/str_current_balltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        android:text="@string/patient_settings_ballgame_current_time" />

    <TextView
        android:id="@+id/title_change_time2"
        android:layout_below="@+id/str_current_balltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:text="Change Time (s)" />

    <EditText
        android:id="@+id/str_change_time_ball"
        android:layout_below="@+id/str_current_balltime"
        android:layout_toEndOf="@id/title_change_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:ems="2"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Save" />
</RelativeLayout>